--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "vrb",
-  "version": "1.0.8",
-  "main": "index.js",
+  "version": "1.1.0",
+  "main": "dist/index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/cmloegcmluin/vrb.git"
+  },
+  "scripts": {
+    "build": "tsc"
   },
   "keywords": [
     "vr",
@@ -20,8 +23,14 @@
     "spatial audio",
     "vr controllers"
   ],
+  "types": "dist/index.d.ts",
   "dependencies": {
+    "@types/three": "^0.93.8",
     "three-full": "^6.0.0",
     "three-vrcontroller-module": "^1.0.2"
+  },
+  "devDependencies": {
+    "tsc": "^1.20150623.0",
+    "typescript": "^3.1.6"
   }
 }
