--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vrb",
-  "version": "1.1.2",
-  "main": "dist/index.ts",
+  "version": "1.1.3",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/cmloegcmluin/vrb.git"
@@ -23,7 +23,6 @@
     "spatial audio",
     "vr controllers"
   ],
-  "types": "dist/index.d.ts",
   "dependencies": {
     "@types/three": "^0.93.8",
     "three-full": "^6.0.0",
