--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "spatial audio",
     "vr controllers"
   ],
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@types/three": "^0.93.8",
     "three-full": "^6.0.0",
