--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "target": "es5",
+    "rootDir": "src",
     "outDir": "dist",
     "downlevelIteration": true,
     "lib": [
