orbit controls are not part of the main code, fine

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "baseUrl": ".",
+    "paths": {
+      "three-orbit-controls": [
+        "node_modules/@types/three"
+      ]
+    },
     "declaration": true
   }
 }
