--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.22",
+  "version": "1.1.23",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/three": "^0.93.13",
     "three": "^0.99.0",
+    "three-orbit-controls": "^82.1.0",
     "three-vrcontroller-module": "^1.0.3"
   },
   "devDependencies": {
