orbit controls - lets use a saner package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "three-orbit-controls": [
+      "three-orbitcontrols": [
         "node_modules/@types/three"
       ]
     },
