--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.24",
+  "version": "1.1.25",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
   "dependencies": {
     "@types/three": "^0.93.13",
     "three": "^0.99.0",
-    "three-orbitcontrols": "^2.99.1",
+    "three-orbitcontrols-ts": "^0.1.2",
     "three-vrcontroller-module": "^1.0.3"
   },
   "devDependencies": {
