--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.26",
+  "version": "1.1.27",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "three-vrcontroller-module": "^1.0.3"
   },
   "devDependencies": {
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "webvr-polyfill": "^0.10.10"
   }
 }
