--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.27",
+  "version": "1.1.29",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -28,10 +28,10 @@
     "@types/three": "^0.93.13",
     "three": "^0.99.0",
     "three-orbitcontrols-ts": "^0.1.2",
-    "three-vrcontroller-module": "^1.0.3"
+    "three-vrcontroller-module": "^1.0.3",
+    "webvr-polyfill": "^0.10.10"
   },
   "devDependencies": {
-    "typescript": "^3.2.2",
-    "webvr-polyfill": "^0.10.10"
+    "typescript": "^3.2.2"
   }
 }
