--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.30",
+  "version": "1.1.31",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -28,8 +28,7 @@
     "@types/three": "^0.93.13",
     "three": "^0.99.0",
     "three-orbitcontrols-ts": "^0.1.2",
-    "three-vrcontroller-module": "^1.0.3",
-    "webvr-polyfill": "^0.10.10"
+    "three-vrcontroller-module": "^1.0.3"
   },
   "devDependencies": {
     "typescript": "^3.2.2"
