--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.49",
+  "version": "1.1.50",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@types/node": "^10.12.19",
     "@types/three": "^0.93.13",
     "three": "^0.99.0",
     "three-orbitcontrols-ts": "^0.1.2",
