--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.55",
+  "version": "1.1.57",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -25,12 +25,11 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@types/three": "^0.93.30",
-    "three": "^0.99.0",
-    "three-orbitcontrols-ts": "^0.1.2",
-    "three-vrcontroller-module": "^1.0.5"
+    "@types/three": "^0.93.31",
+    "three": "^0.110.0",
+    "three-orbitcontrols-ts": "^0.1.2"
   },
   "devDependencies": {
-    "typescript": "^3.4.2"
+    "typescript": "^3.7.2"
   }
 }
