--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrb",
-  "version": "1.1.57",
+  "version": "1.1.60",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -26,8 +26,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@types/three": "^0.93.31",
-    "three": "^0.110.0",
-    "three-orbitcontrols-ts": "^0.1.2"
+    "three": "^0.110.0"
   },
   "devDependencies": {
     "typescript": "^3.7.2"
